모바일 ui 반영3

--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
             align-items: center;
             justify-content: center;
             margin: 0 auto;
+            box-sizing: border-box;
         }
         .circle-timer-svg {
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
         }
         .timer-value {
             position: absolute;
@@ -170,12 +174,20 @@
             }
         }
         @media (max-width: 600px) {
-            .circle-timer-container, .circle-timer-svg {
+            .circle-timer-container {
                 width: 92vw !important;
                 min-width: 0;
                 max-width: 92vw !important;
-                height: 44vw !important;
-                max-height: 44vw !important;
+                height: 46vw !important;
+                max-height: 46vw !important;
+                margin: 0 auto;
+            }
+            .circle-timer-svg {
+                width: 100% !important;
+                height: 100% !important;
+                min-width: 0;
+                max-width: 100% !important;
+                display: block;
             }
             .timer-value {
                 font-size: 2.2rem;
@@ -260,7 +272,7 @@
     <h1>LJ 블라인드 타이머</h1>
     <div class="circle-timer-outer">
         <div class="circle-timer-container">
-            <svg class="circle-timer-svg" width="420" height="210">
+            <svg class="circle-timer-svg" viewBox="0 0 420 210">
                 <path id="bg-arc" d="M30,200 A180,180 0 0,1 390,200" fill="none" stroke="#e0e6f8" stroke-width="14" />
                 <path id="progress-arc" d="M30,200 A180,180 0 0,1 390,200" fill="none" stroke="#4a7bdc" stroke-width="14" stroke-linecap="round" />
             </svg>
