블라인드 셋 수정

--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
 
         const blindSets = [
             { name: "일반", levels: ["25/50", "50/100", "75/150", "100/200", "150/300", "200/400", "300/600", "400/800"] },
-            { name: "칩 게임", levels: ["1/2", "2/4", "3/6", "4/8", "5/10", "6/12", "7/14", "8/16", "9/18", "10/20"] },
-            { name: "링 게임1", levels: ["100/200", "200/400", "300/600", "400/800", "500/1000", "600/1200", "700/1400", "800/1600", "900/1800", "1000/2000"] },
-            { name: "링 게임2", levels: ["500/1000", "1000/2000", "1500/3000", "2000/4000", "2500/5000", "3000/6000", "3500/7000", "4000/8000", "4500/9000", "5000/10000"] }
+            { name: "칩 게임", levels: ["1/2", "2/4", "3/6", "4/8", "5/10", "10/20", '15/30', "20/40"] },
+            { name: "링 게임1", levels: ["100/200", "200/400", "300/600", "400/800", "500/1000", "1000/2000", "2000/4000"] },
+            { name: "링 게임2", levels: ["500/1000", "1000/2000", "1500/3000", "2000/4000", "2500/5000", "3000/6000"] }
         ];
 
         // 반원 아크의 전체 길이(대략 565px)
